objects/Benifit__c.object
<CustomObject>
    <fields>
        <fullName>TestActivity__c</fullName>
        <label>TestActivity</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Benifits</relationshipLabel>
        <relationshipName>Benifits</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TestActivity_del_del__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TestActivity</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Benifits</relationshipLabel>
        <relationshipName>Benifits_del1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>contact_det_del__c</fullName>
        <label>contact det</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>share_del_del__c</fullName>
        <label>share</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>xmlfile_del_del__c</fullName>
        <label>xmlfile</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Benifit</label>
    <nameField>
        <label>Benifit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Benifits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>